--- a/IESA_ROOT/blog/templates/blog/htmx/subscribe_button.html
+++ b/IESA_ROOT/blog/templates/blog/htmx/subscribe_button.html
@@ -1,15 +1,10 @@
 <!-- Subscribe Button Component (HTMX-powered) -->
 {% if request.user.is_authenticated and request.user != author %}
-<form hx-post="{% url 'toggle_subscription' author_pk=author.pk %}" hx-swap="outerHTML">
+<form hx-post="{% url 'toggle_subscription' author_pk=author.pk %}" hx-swap="outerHTML" class="engage-chip">
     {% csrf_token %}
-    <button type="submit" class="btn btn-sm {% if is_subscribed %}btn-primary btn-modern{% else %}btn-outline-primary btn-modern{% endif %}" title="Subscribe to {{ author.username }}'s blog">
-        <i class="fas fa-bell {% if is_subscribed %}fa-solid{% else %}fa-regular{% endif %} me-1"></i>
-        <span class="d-none d-sm-inline">
-            {% if is_subscribed %}Subscribed{% else %}Subscribe{% endif %}
-        </span>
-        <span class="d-sm-none">
-            <i class="fas fa-bell"></i>
-        </span>
+    <button type="submit" class="btn engage-btn {% if is_subscribed %}engage-btn--active{% endif %}" title="Subscribe to {{ author.username }}'s blog">
+        <span class="engage-icon"><i class="fas fa-bell{% if is_subscribed %} fa-solid{% else %} fa-regular{% endif %}"></i></span>
+        <span class="engage-label">{% if is_subscribed %}Subscribed{% else %}Subscribe{% endif %}</span>
     </button>
 </form>
 {% endif %}
