--- a/IESA_ROOT/blog/templates/blog/post_detail.html
+++ b/IESA_ROOT/blog/templates/blog/post_detail.html
@@ -16,6 +16,9 @@
                     <p class="mb-0"><i class="fas fa-user-circle me-1"></i> Author: <strong><a href="{% url 'profile_public_username' username=post.author.username %}" class="text-decoration-none">{{ post.author.username }}</a></strong></p>
                     <p class="mb-0"><i class="fas fa-calendar-alt me-1"></i> {{ post.created_at|date:"d M Y" }}</p>
                     <p class="mb-0"><i class="fas fa-eye me-1"></i> {{ post.views_count }}</p>
+                </div>
+
+                <div class="d-flex flex-wrap align-items-center gap-2 mb-4">
                     <!-- HTMX Like Button Component -->
                     <div id="like-button-container" 
                          hx-get="{% url 'like_post' pk=post.pk %}" 
